--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <script src="Slider.js"></script>
     <script src="sketch.js"></script>
     <script src="Archivos.js"></script>
     <script src="App.js"></script>
